--- a/Naive_Bayes/Nayve_Bayes.ipynb
+++ b/Naive_Bayes/Nayve_Bayes.ipynb
@@ -2942,6 +2942,30 @@
     "    target_names=sentimento\n",
     "))"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "73d40cac",
+   "metadata": {},
+   "source": [
+    "**Considerações Finais**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1eb8bfd4",
+   "metadata": {},
+   "source": [
+    "* Considere aumentar a quantidade de dados de treino.\n",
+    "\n",
+    "* Pela sua simplicidade o Naive Bayes pode ser usado perfeitamente como um algoritmo de Baseline.\n",
+    "\n",
+    "* Considere alterar os parâmetros do algoritmo.\n",
+    "\n",
+    "* Em tarefas de classificação de textos considere utilizar outras modelagens como Bigrams por exemplo.\n",
+    "\n",
+    "* Em tarefas envolvendo textos outras técnicas como stemming ou remoção de stoptowords podem dar bons resultados."
+   ]
   }
  ],
  "metadata": {
