Adicionando Parâmetros do classificador DecisionTreeClassifier

--- a/7-Arvore-decisao/Arvore-decisao.ipynb
+++ b/7-Arvore-decisao/Arvore-decisao.ipynb
@@ -395,7 +395,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "141282ef",
    "metadata": {},
    "outputs": [],
@@ -407,6 +407,92 @@
     "# X_train e y_train contêm as features e rótulos para o conjunto de treinamento.\n",
     "# X_test e y_test contêm as features e rótulos para o conjunto de teste.\n",
     "X_train, X_test, y_train, y_test = train_test_split(iris.data,iris.target,test_size=0.3)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "cb8c296f",
+   "metadata": {},
+   "source": [
+    "#### Verificando a forma dos dados"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "57479dd5",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "((105, 4), (45, 4))"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Retorna as dimensões (linhas, colunas) dos conjuntos de treinamento e teste,\n",
+    "# o que é útil para verificar se a divisão dos dados foi feita corretamente.\n",
+    "X_train.shape,X_test.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "bcc98e7d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "((105,), (45,))"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Retorna as dimensões (linhas, colunas) dos conjuntos de rótulos de treinamento e teste,\n",
+    "# o que é útil para verificar se a divisão dos dados foi feita corretamente.\n",
+    "y_train.shape,y_test.shape"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5d3b1702",
+   "metadata": {},
+   "source": [
+    "#### Instânciando o objeto classificador"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "592183ba",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# clf agora é uma instância da classe DecisionTreeClassifier, pronta para ser treinada.\n",
+    "clf = tree.DecisionTreeClassifier()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "354ce5ff",
+   "metadata": {},
+   "source": [
+    "#### Parâmetros do  classificador DecisionTreeClassifier\n",
+    "* criterion: medida de qualidade da divisão\n",
+    "* splitter: estratégia utilizada para dividir o nó de decisão\n",
+    "* max_depth: profundidade máxima da árvore\n",
+    "* min_samples_split: número de amostras mínimas para considerar um nó para divisão\n",
+    "* min_samples_leaf: número de amostras mínimas no nível folha\n"
    ]
   }
  ],
