Executando o Algoritimo com Treino e Teste

--- a/7-Arvore-decisao/Arvore-decisao.ipynb
+++ b/7-Arvore-decisao/Arvore-decisao.ipynb
@@ -473,7 +473,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "592183ba",
    "metadata": {},
    "outputs": [],
@@ -493,6 +493,122 @@
     "* max_depth: profundidade máxima da árvore\n",
     "* min_samples_split: número de amostras mínimas para considerar um nó para divisão\n",
     "* min_samples_leaf: número de amostras mínimas no nível folha\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bcca52a6",
+   "metadata": {},
+   "source": [
+    "#### Treinando o modelo de arvore de decisão"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "ad91d648",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Treina o classificador de árvore de decisão usando os dados de treinamento (features e rótulos).\n",
+    "clf = clf.fit(X_train,y_train)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1d9d23ca",
+   "metadata": {},
+   "source": [
+    "#### Verificando as features mais importantes para o modelo de arvore de decisão treinado"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "52e7213f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0.0190528, 0.       , 0.5726321, 0.4083151])"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Exibe a importância de cada feature (atributo) para o modelo de árvore de decisão,\n",
+    "# indicando quais features foram mais relevantes na tomada de decisões.\n",
+    "clf.feature_importances_"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "f10faa0f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "sepal length (cm):0.01905280348394121\n",
+      "sepal width (cm):0.0\n",
+      "petal length (cm):0.572632098243704\n",
+      "petal width (cm):0.40831509827235474\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Itera sobre os nomes das features e suas importâncias, exibindo cada par.\n",
+    "for feature,importancia in zip(iris.feature_names,clf.feature_importances_):\n",
+    "    print(\"{}:{}\".format(feature, importancia))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "cddd4872",
+   "metadata": {},
+   "source": [
+    "#### Executando o algoritmo de arvore de decisão com o conjunto de teste"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9ce03e44",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([2, 2, 0, 2, 1, 0, 1, 2, 2, 2, 0, 0, 1, 0, 1, 0, 1, 2, 1, 1, 1, 0,\n",
+       "       1, 0, 0, 1, 0, 2, 0, 0, 1, 1, 2, 0, 2, 2, 2, 1, 1, 2, 0, 2, 2, 0,\n",
+       "       1])"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Realiza previsões nos dados de teste (X_test) usando o classificador treinado (clf).\n",
+    "# O resultado são as classes previstas para cada amostra no conjunto de teste.\n",
+    "resultado = clf.predict(X_test)\n",
+    "# Exibe o array de resultados, que contém as previsões do modelo.\n",
+    "resultado"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "53cf6a05",
+   "metadata": {},
+   "source": [
+    "#### Testando com uma nova amostra"
    ]
   }
  ],
