--- a/7-Arvore-decisao/Arvore-decisao.ipynb
+++ b/7-Arvore-decisao/Arvore-decisao.ipynb
@@ -578,7 +578,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "id": "9ce03e44",
    "metadata": {},
    "outputs": [
@@ -609,6 +609,124 @@
    "metadata": {},
    "source": [
     "#### Testando com uma nova amostra"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "1ff50048",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0])"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Cria um novo array numpy com uma única amostra de dados para teste.\n",
+    "# Esta amostra representa uma nova flor de íris com quatro características (sepal length, sepal width, petal length, petal width).\n",
+    "test = np.array([[5.1,3.5,1.4,0.2]])\n",
+    "# Usa o classificador treinado (clf) para prever a espécie da íris com base na nova amostra de teste.\n",
+    "# O método predict retornará a classe (0, 1 ou 2) que o modelo atribui a esta flor.\n",
+    "clf.predict(test)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5712494d",
+   "metadata": {},
+   "source": [
+    "#### Verificando a probabilidade"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "aae9e403",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[1., 0., 0.]])"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Retorna a probabilidade de cada classe para a amostra de teste.\n",
+    "# O resultado é um array onde cada elemento representa a probabilidade da amostra\n",
+    "# pertencer a cada uma das classes disponíveis (setosa, versicolor, virginica).\n",
+    "clf.predict_proba(test)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bf0419cc",
+   "metadata": {},
+   "source": [
+    "#### Métricas de Validação"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bfb6720c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "      setosa       1.00      1.00      1.00        15\n",
+      "  versicolor       0.93      1.00      0.97        14\n",
+      "   virginica       1.00      0.94      0.97        16\n",
+      "\n",
+      "    accuracy                           0.98        45\n",
+      "   macro avg       0.98      0.98      0.98        45\n",
+      "weighted avg       0.98      0.98      0.98        45\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Importa o módulo metrics da biblioteca sklearn, que contém funções para avaliação de modelos.\n",
+    "from sklearn import metrics\n",
+    "# Imprime um relatório de classificação detalhado, que inclui precisão, recall, f1-score\n",
+    "# e suporte para cada classe.\n",
+    "# y_test são os rótulos verdadeiros do conjunto de teste.\n",
+    "# resultado são os rótulos previstos pelo modelo para o conjunto de teste.\n",
+    "# target_names são os nomes das classes (espécies de íris) para melhor legibilidade do relatório.\n",
+    "print(metrics.classification_report(y_test,resultado,target_names=iris.target_names))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "00fb459d",
+   "metadata": {},
+   "source": [
+    "#### Biblioteca para utilização de widgets interativos"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f07f7f06",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Continuação..."
    ]
   }
  ],
