--- a/7-Arvore-decisao/Arvore-decisao.ipynb
+++ b/7-Arvore-decisao/Arvore-decisao.ipynb
@@ -183,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "28eb1376",
    "metadata": {},
    "outputs": [
@@ -193,7 +193,7 @@
        "array(['setosa', 'versicolor', 'virginica'], dtype='<U10')"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -205,7 +205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "30420340",
    "metadata": {},
    "outputs": [
@@ -364,7 +364,7 @@
        "       [5.9, 3. , 5.1, 1.8]])"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -384,7 +384,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "id": "c906a3d5",
    "metadata": {},
    "outputs": [],
@@ -395,7 +395,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "id": "141282ef",
    "metadata": {},
    "outputs": [],
@@ -419,7 +419,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "id": "57479dd5",
    "metadata": {},
    "outputs": [
@@ -429,7 +429,7 @@
        "((105, 4), (45, 4))"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -442,7 +442,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "id": "bcc98e7d",
    "metadata": {},
    "outputs": [
@@ -452,7 +452,7 @@
        "((105,), (45,))"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -473,7 +473,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "id": "592183ba",
    "metadata": {},
    "outputs": [],
@@ -505,7 +505,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "id": "ad91d648",
    "metadata": {},
    "outputs": [],
@@ -524,17 +524,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "id": "52e7213f",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([0.0190528, 0.       , 0.5726321, 0.4083151])"
+       "array([0.02777683, 0.01911524, 0.55543842, 0.39766951])"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -547,7 +547,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "id": "f10faa0f",
    "metadata": {},
    "outputs": [
@@ -555,10 +555,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "sepal length (cm):0.01905280348394121\n",
-      "sepal width (cm):0.0\n",
-      "petal length (cm):0.572632098243704\n",
-      "petal width (cm):0.40831509827235474\n"
+      "sepal length (cm):0.027776829601310764\n",
+      "sepal width (cm):0.01911523757509558\n",
+      "petal length (cm):0.555438419360514\n",
+      "petal width (cm):0.3976695134630798\n"
      ]
     }
    ],
@@ -578,19 +578,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "id": "9ce03e44",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([2, 2, 0, 2, 1, 0, 1, 2, 2, 2, 0, 0, 1, 0, 1, 0, 1, 2, 1, 1, 1, 0,\n",
-       "       1, 0, 0, 1, 0, 2, 0, 0, 1, 1, 2, 0, 2, 2, 2, 1, 1, 2, 0, 2, 2, 0,\n",
+       "array([1, 1, 2, 1, 2, 0, 2, 1, 2, 0, 0, 0, 1, 1, 0, 1, 2, 0, 2, 2, 0, 0,\n",
+       "       0, 0, 2, 1, 2, 0, 1, 0, 1, 0, 1, 0, 1, 2, 2, 0, 0, 2, 1, 2, 2, 1,\n",
        "       1])"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -613,7 +613,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 16,
    "id": "1ff50048",
    "metadata": {},
    "outputs": [
@@ -623,7 +623,7 @@
        "array([0])"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -647,7 +647,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 17,
    "id": "aae9e403",
    "metadata": {},
    "outputs": [
@@ -657,7 +657,7 @@
        "array([[1., 0., 0.]])"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -679,7 +679,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "id": "bfb6720c",
    "metadata": {},
    "outputs": [
@@ -689,13 +689,13 @@
      "text": [
       "              precision    recall  f1-score   support\n",
       "\n",
-      "      setosa       1.00      1.00      1.00        15\n",
-      "  versicolor       0.93      1.00      0.97        14\n",
-      "   virginica       1.00      0.94      0.97        16\n",
+      "      setosa       1.00      1.00      1.00        16\n",
+      "  versicolor       0.93      0.78      0.85        18\n",
+      "   virginica       0.71      0.91      0.80        11\n",
       "\n",
-      "    accuracy                           0.98        45\n",
-      "   macro avg       0.98      0.98      0.98        45\n",
-      "weighted avg       0.98      0.98      0.98        45\n",
+      "    accuracy                           0.89        45\n",
+      "   macro avg       0.88      0.90      0.88        45\n",
+      "weighted avg       0.90      0.89      0.89        45\n",
       "\n"
      ]
     }
@@ -721,12 +721,117 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "id": "f07f7f06",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Requirement already satisfied: ipywidgets in c:\\users\\cliente\\appdata\\local\\programs\\python\\python311\\lib\\site-packages (8.1.8)\n",
+      "Requirement already satisfied: comm>=0.1.3 in c:\\users\\cliente\\appdata\\roaming\\python\\python311\\site-packages (from ipywidgets) (0.2.1)\n",
+      "Requirement already satisfied: ipython>=6.1.0 in c:\\users\\cliente\\appdata\\roaming\\python\\python311\\site-packages (from ipywidgets) (8.20.0)\n",
+      "Requirement already satisfied: traitlets>=4.3.1 in c:\\users\\cliente\\appdata\\local\\programs\\python\\python311\\lib\\site-packages (from ipywidgets) (5.9.0)\n",
+      "Requirement already satisfied: widgetsnbextension~=4.0.14 in c:\\users\\cliente\\appdata\\local\\programs\\python\\python311\\lib\\site-packages (from ipywidgets) (4.0.15)\n",
+      "Requirement already satisfied: jupyterlab_widgets~=3.0.15 in c:\\users\\cliente\\appdata\\local\\programs\\python\\python311\\lib\\site-packages (from ipywidgets) (3.0.16)\n",
+      "Requirement already satisfied: decorator in c:\\users\\cliente\\appdata\\roaming\\python\\python311\\site-packages (from ipython>=6.1.0->ipywidgets) (5.1.1)\n",
+      "Requirement already satisfied: jedi>=0.16 in c:\\users\\cliente\\appdata\\roaming\\python\\python311\\site-packages (from ipython>=6.1.0->ipywidgets) (0.19.1)\n",
+      "Requirement already satisfied: matplotlib-inline in c:\\users\\cliente\\appdata\\roaming\\python\\python311\\site-packages (from ipython>=6.1.0->ipywidgets) (0.1.6)\n",
+      "Requirement already satisfied: prompt-toolkit<3.1.0,>=3.0.41 in c:\\users\\cliente\\appdata\\roaming\\python\\python311\\site-packages (from ipython>=6.1.0->ipywidgets) (3.0.43)\n",
+      "Requirement already satisfied: pygments>=2.4.0 in c:\\users\\cliente\\appdata\\roaming\\python\\python311\\site-packages (from ipython>=6.1.0->ipywidgets) (2.17.2)\n",
+      "Requirement already satisfied: stack-data in c:\\users\\cliente\\appdata\\roaming\\python\\python311\\site-packages (from ipython>=6.1.0->ipywidgets) (0.6.3)\n",
+      "Requirement already satisfied: colorama in c:\\users\\cliente\\appdata\\roaming\\python\\python311\\site-packages (from ipython>=6.1.0->ipywidgets) (0.4.6)\n",
+      "Requirement already satisfied: wcwidth in c:\\users\\cliente\\appdata\\roaming\\python\\python311\\site-packages (from prompt-toolkit<3.1.0,>=3.0.41->ipython>=6.1.0->ipywidgets) (0.2.13)\n",
+      "Requirement already satisfied: parso<0.9.0,>=0.8.3 in c:\\users\\cliente\\appdata\\roaming\\python\\python311\\site-packages (from jedi>=0.16->ipython>=6.1.0->ipywidgets) (0.8.3)\n",
+      "Requirement already satisfied: executing>=1.2.0 in c:\\users\\cliente\\appdata\\roaming\\python\\python311\\site-packages (from stack-data->ipython>=6.1.0->ipywidgets) (2.0.1)\n",
+      "Requirement already satisfied: asttokens>=2.1.0 in c:\\users\\cliente\\appdata\\roaming\\python\\python311\\site-packages (from stack-data->ipython>=6.1.0->ipywidgets) (2.4.1)\n",
+      "Requirement already satisfied: pure-eval in c:\\users\\cliente\\appdata\\roaming\\python\\python311\\site-packages (from stack-data->ipython>=6.1.0->ipywidgets) (0.2.2)\n",
+      "Requirement already satisfied: six>=1.12.0 in c:\\users\\cliente\\appdata\\local\\programs\\python\\python311\\lib\\site-packages (from asttokens>=2.1.0->stack-data->ipython>=6.1.0->ipywidgets) (1.16.0)\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "[notice] A new release of pip is available: 25.2 -> 25.3\n",
+      "[notice] To update, run: python.exe -m pip install --upgrade pip\n"
+     ]
+    }
+   ],
    "source": [
-    "#Continuação..."
+    "# Instala a biblioteca ipywidgets, que é usada para criar elementos de interface de usuário interativos em notebooks Jupyter.\n",
+    "%pip install ipywidgets"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "2e515d10",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Collecting pydot\n",
+      "  Downloading pydot-4.0.1-py3-none-any.whl.metadata (11 kB)\n",
+      "Requirement already satisfied: pyparsing>=3.1.0 in c:\\users\\cliente\\appdata\\local\\programs\\python\\python311\\lib\\site-packages (from pydot) (3.2.0)\n",
+      "Downloading pydot-4.0.1-py3-none-any.whl (37 kB)\n",
+      "Installing collected packages: pydot\n",
+      "Successfully installed pydot-4.0.1\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "[notice] A new release of pip is available: 25.2 -> 25.3\n",
+      "[notice] To update, run: python.exe -m pip install --upgrade pip\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Instala a biblioteca pydot, que é uma interface Python para o Graphviz.\n",
+    "# É frequentemente usada para criar representações gráficas de árvores de decisão.\n",
+    "# Juntamente com export_graphviz e graphviz (instalado no próximo passo),\n",
+    "# permite visualizar a estrutura da árvore de decisão.\n",
+    "!pip3 install pydot"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f1145bc7",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Collecting graphviz\n",
+      "  Downloading graphviz-0.21-py3-none-any.whl.metadata (12 kB)\n",
+      "Downloading graphviz-0.21-py3-none-any.whl (47 kB)\n",
+      "Installing collected packages: graphviz\n",
+      "Successfully installed graphviz-0.21\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "[notice] A new release of pip is available: 25.2 -> 25.3\n",
+      "[notice] To update, run: python.exe -m pip install --upgrade pip\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Instala a biblioteca graphviz, que é uma ferramenta de código aberto para visualização de gráficos.\n",
+    "# É essencial para renderizar as árvores de decisão exportadas pelo export_graphviz em um formato visual.\n",
+    "!pip3 install graphviz"
    ]
   }
  ],
