Instalação da biblioteca mlextend para visualização das fronteiras de complexidade

--- a/7-Arvore-decisao/Arvore-decisao.ipynb
+++ b/7-Arvore-decisao/Arvore-decisao.ipynb
@@ -1990,6 +1990,96 @@
    "source": [
     "#### Extraindo regras da arvore gerada a partir de uma determinada amostra do conjunto de teste X_teste"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0d4a3348",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def extrai_regras(sample_id):\n",
+    "    # Calcula o caminho da decisão (nós visitados) para todas as amostras no conjunto de teste.\n",
+    "    # Retorna uma matriz esparsa onde cada linha corresponde a uma amostra e as colunas indicam os nós no caminho.\n",
+    "    node_indicator = estimator.decision_path(X_test)\n",
+    "\n",
+    "    # Aplica o estimador às amostras de teste para obter o ID do nó folha para cada amostra.\n",
+    "    leave_id = estimator.apply(X_test)\n",
+    "\n",
+    "    # Extrai os IDs dos nós no caminho da decisão para a amostra específica (sample_id).\n",
+    "    # node_indicator.indptr define os ponteiros para o início e fim de cada amostra na matriz esparsa.\n",
+    "    # node_indicator.indices contém todos os IDs dos nós visitados.\n",
+    "    node_index = node_indicator.indices[node_indicator.indptr[sample_id]:\n",
+    "                                        node_indicator.indptr[sample_id + 1]]\n",
+    "\n",
+    "    print('\\nRegras usadas para predizer a amostra %s' % (sample_id))\n",
+    "\n",
+    "    # Imprime os valores das features da amostra para referência.\n",
+    "    for f,v in zip(iris.feature_names,X_test[sample_id]):\n",
+    "        print('%s = %s'%(f,v))\n",
+    "\n",
+    "    print('\\n')\n",
+    "    # Itera sobre os nós no caminho da decisão para a amostra.\n",
+    "    for node_id in node_index:\n",
+    "        # Se o nó atual for o nó folha (onde a decisão final foi tomada),\n",
+    "        # continua para o próximo nó para evitar imprimir a regra do nó folha.\n",
+    "        if leave_id[sample_id] == node_id:\n",
+    "            continue\n",
+    "\n",
+    "        # Determina o operador de comparação (<= ou >) com base no valor da feature da amostra\n",
+    "        # em relação ao limiar do nó.\n",
+    "        if (X_test[sample_id, feature[node_id]] <= threshold[node_id]):\n",
+    "            threshold_sign = \"<=\"\n",
+    "        else:\n",
+    "            threshold_sign = \">\"\n",
+    "\n",
+    "        # Imprime a regra de decisão para o nó atual, mostrando qual feature e limiar foram usados.\n",
+    "        print(\"id do nó de decisão %s : (atributo %s com valor = %s %s %s)\"\n",
+    "              % (node_id,\n",
+    "                 iris.feature_names[feature[node_id]], # Nome da feature usada na decisão.\n",
+    "                 X_test[sample_id, feature[node_id]],  # Valor da feature da amostra.\n",
+    "                 threshold_sign,                        # Operador de comparação.\n",
+    "                 threshold[node_id]))                   # Valor do limiar do nó.\n",
+    "    # Realiza a predição para a amostra atual (reshape(1, -1) é necessário para que a entrada seja 2D).\n",
+    "    pred =estimator.predict(X_test[sample_id].reshape(1, -1))\n",
+    "    # Imprime a classe prevista para a amostra, usando os nomes das classes para melhor legibilidade.\n",
+    "    print(\"\\tClasse => %s\" %iris.target_names[pred])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "id": "e0b5b32b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Regras usadas para predizer a amostra 2\n",
+      "sepal length (cm) = 5.5\n",
+      "sepal width (cm) = 4.2\n",
+      "petal length (cm) = 1.4\n",
+      "petal width (cm) = 0.2\n",
+      "\n",
+      "\n",
+      "id do nó de decisão 0 : (atributo sepal length (cm) com valor = 0.2 <= 0.800000011920929)\n",
+      "\tClasse => ['setosa']\n"
+     ]
+    }
+   ],
+   "source": [
+    "extrai_regras(2)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f4c475f7",
+   "metadata": {},
+   "source": [
+    "#### Instalação da biblioteca mlextend para visualização das fronteiras de complexidade"
+   ]
   }
  ],
  "metadata": {
