Adicionando README.md

--- a/7-Arvore-decisao/Arvore-decisao.ipynb
+++ b/7-Arvore-decisao/Arvore-decisao.ipynb
@@ -3851,6 +3851,26 @@
    "source": [
     "visualize_fronteiras(10)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5fb313ea",
+   "metadata": {},
+   "source": [
+    "O gráfico mostra:\n",
+    "\n",
+    "- As regiões de decisão criadas pela Árvore de Decisão\n",
+    "\n",
+    "- Cada cor representa uma classe do Iris\n",
+    "\n",
+    "Dá pra ver claramente:\n",
+    "\n",
+    "- Setosa totalmente separada\n",
+    "\n",
+    "- Versicolor e Virginica separadas por regras da árvore\n",
+    "\n",
+    "- As linhas retas são os splits da árvore"
+   ]
   }
  ],
  "metadata": {
